force-app/main/default/objects/Certification__c/fields/Credential_URL__c.field-meta.xml
<CustomField>
    <fullName>Credential_URL__c</fullName>
    <label>Credential URL</label>
    <type>Url</type>
</CustomField>