force-app/main/default/objects/Certification__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <label>Issuer</label>
    <length>120</length>
    <type>Text</type>
</CustomField>