force-app/main/default/objects/Certification__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile</label>
    <referenceTo>Portfolio_Profile__c</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>